Package.json updates and assignment completion

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./src/server.js",
     "pretest": "eslint ./src --fix",
-    "test": "echo \"Tests complete\"
+    "test": "echo \"Tests complete\""
   },
   "repository": {
     "type": "git",
